# basil

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml
basil/: __init__.py  client.py  config.py  config_writer.py  demo.py  main.py  profile_manager.py  server_config.py
basil/ui/: __init__.py  app.css  app.py
basil/ui/screens/: config_create.py  config_load.py  main.py  profile_select.py
basil/ui/widgets/: __init__.py  base_resource_detail.py  base_resource_list.py  path_input.py  resource_detail.py  resource_list.py  server_config.py
basil/ui/widgets/checks/: __init__.py  check_detail.py  check_list.py
basil/ui/widgets/connections/: __init__.py  connection_detail.py  connection_list.py
basil/ui/widgets/entities/: __init__.py  entity_detail.py  entity_list.py
basil/ui/widgets/events/: __init__.py  event_detail.py  event_list.py
basil/ui/widgets/silences/: __init__.py  silence_detail.py  silence_list.py
basil/utils/: __init__.py  connection_test.py
basil/views/: __init__.py  checks.py  entities.py  events.py  servers.py  silences.py
scripts/: decrypt_config.py
