[tool.poetry]
name = "basil"
version = "0.3.0"
description = "A terminal based client for Sensu"
authors = ["Cole Tuininga <cole.tuininga@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12.0"
fawlty = { url = "https://github.com/egon1024/fawlty/releases/download/0.3.0/fawlty-0.3.0-py3-none-any.whl" }
PyYAML = "^6.0.2"
textual = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pyflakes = "^3.2.0"
pylint = "^3.0.0"

[tool.poetry.scripts]
basil = "basil.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "R0801",  # Similar lines
    "R0902",  # Too many instance attributes
    "R0903",  # Too few public methods
    "R0912",  # Too many branches
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
    "R0915",  # Too many statements
    "R0917",  # Too many positional arguments
    "R1702",  # Too many tested blocks
    "W0718",  # Catching too general exception
]

